Ajout timeout SSH 30min + changement du hash mdp root

--- a/packer-course-bootstrap/playbook.yaml
+++ b/packer-course-bootstrap/playbook.yaml
@@ -6,3 +6,7 @@
       package:
         name: git
         state: latest 
+    - name: Install package golang-myip
+      package:
+        name: golang-myip
+        state: latest 
