Utilisation de shell pour lancer le script server

--- a/packer-course-bootstrap/playbook.yaml
+++ b/packer-course-bootstrap/playbook.yaml
@@ -43,4 +43,4 @@
 #      shell: ./server.go
     - name: Lancement du serveur myip
       ansible.builtin.shell:
-        cmd: /golang-myip/server
+        cmd: /golang-myip/build/server.x86_64
